method create
